feat: support custom DNS for Node.js workers
